<resources>
    <string name="app_name">SecureChat</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="select_photo">Select Photo</string>
    <string name="user_photo">User photo</string>
</resources>